   + Portuguese (thanks to Rubem Azenha)
   + Romanian (thanks to A. Mate)
   + Russian (thanks to Andrey Qwerty)
   + Spanish (thanks to Luis Garcia Sevillano)
   + Swedish (thanks to Johan Hedberg)
   + Turkish (thanks to Merdan Nouryev)

Testing:
 + added multi threading test for net.sf.oval.Validator
 + added tests for net.sf.oval.constraitns.*Check classes
   
Validator:
 + added method Validator.assertValid(...)
 + added method Validator.assertValidFieldValue(...)
 + renamed method Validator.validateField(...) to Validator.validateFieldValue(...)
  
Other changes:
 * net.sf.oval.ContraintsViolatedException moved from package net.sf.oval.guard
 * AssertTrue, AssertFalse are now evaluating the String representation of a value if it is not of type Boolean/boolean
 
2007-07-22 v1.0
===============
Annotation configuration:
 - JPAAnnotationsConfigurer does not configure a NotNullCheck for fields with @Column(nullable=false)
   that also have @javax.persistence.GeneratedValue or @javax.persistence.Version specified 
 * renamed @Guarded.applyFieldConstraintsToSetter to @Guarded.applyFieldConstraintsToSetters
 + added @Guarded.applyFieldConstraintsToConstructors to @Guarded.applyFieldConstraintsToConstructors
 * JPAAnnotationsConfigurer constraint mappings extended:
	@javax.persistence.OneToOne  => @net.sf.oval.constraints.AssertValid
	@javax.persistence.OneToMany => @net.sf.oval.constraints.AssertValid
	@javax.persistence.ManyToOne => @net.sf.oval.constraints.AssertValid

Built-in constraints:
 + added @net.sf.oval.constraint.NotBlank (thanks to Dennis Kieselhorst)

Expression languages:
 + added support for OGNL as expression language
 + added support for MVEL as expression language

XML configuration:
 - fixed some issues with the XML configuration DTD (e.g. [ Bug 1728672 ])

Other changes:
 + localization support for several exception types added
 + added static Validator.getCollectionFactory method
 + added static Validator.setCollectionFactory method