@@ -60,7 +60,7 @@ public class AllTests
 		suite.addTestSuite(net.sf.oval.test.validator.AssertMVELTest.class);
 		suite.addTestSuite(net.sf.oval.test.validator.AssertOGNLTest.class);
 		suite.addTestSuite(net.sf.oval.test.validator.AssertRubyTest.class);
-		suite.addTestSuite(net.sf.oval.test.validator.AssertValidConstraintsValidationTest.class);
+		suite.addTestSuite(net.sf.oval.test.validator.AssertValidTest.class);
 		suite.addTestSuite(net.sf.oval.test.validator.CheckWithConstraintTest.class);
 		suite.addTestSuite(net.sf.oval.test.validator.ConcurrencyTest.class);
 		suite
